  - Sep. (boxed)
- Add setup dialogs to Inks:
  - L Grad (dither)
  - V Grad (dither)
  - H Grad (dither)
  - R Grad (dither, Center)
- Add Tool and Ink selector


2023.04.25
- BUGFIX: Losing the first click after receiving focus (after the external save dialog)
  is a feature in SDL2 which can be disabled with:
  SDL_SetHint(SDL_HINT_MOUSE_FOCUS_CLICKTHROUGH, '1');

2023.04.24
- Project/Save works, a pop-up message appears on successful save.
- BUG: You have to click twice the pop-up message's button.
  First click is hijacked by some other control. (Need investigation!)

2023.04.21
- Merged button, slider and colorbox classes in one unit (BDPBasicControls).
- Renamed units (removed the word unit from the end of the names).

2023.04.14
- Menus are loaded from external file. (look at \work\menu)
- Added 16x zoom. (+1 level)
- Added About menu.
- Renamed SplashScreen to AboutDialog.
- Updated AboutDialog with licensing info and added a button to close it.

2023.04.13
- Removed system state from fileformats.txt.
- Fixed undo block types in fileformats.txt.

2023.04.12
- Restructured fileformats.txt.
- Added Extended Image data block (E) and Project data block (P) to fileformats.txt.
- Added project and extended image class with saving to and loading from stream.
- BDPUndoUnit variable names uniformized, added CreateFromStream where missed.
- Global variables are changed to Project properties:
  MainImage, OverlayImage, ColorClusters, CELImage, ImageUndoSystem, PaletteUndoSystem
- OverlayImage palette is separated from OverlayImage.

2023.04.11
- New color cluster system.
- Gradient inks uses the new color cluster system.
- Preparations for saving/loading color clusters and the visual control of it.
- Color clusters are saved into system state and read back on startup.
- Added ColorCluster to PaletteEditor.
- ColorCluster shows the selected color.

2023.04.09
- Added ColorBox to PaletteEditor. It shows the selected color in a bigger area.

2023.04.07