@@ -1,23 +1,13 @@
-const NTSCCOL:string=#0#0#0'???'#8#20'6<'#10#5#20'<'#10'77'#10'<'#20'<'#10'8<!'#5+
-#6#0#30#10#29#30#10#30#2#29#10#30'  '#0'<'#5' <<'#10#30'%'#13#22'&'#15#23#39#17#25+
-'('#19#27')'#21#29'*'#23#31'+'#25' <1'#6'<2'#12'<4'#17'<5'#23'<7'#28'<8"<9'#39'<;'+
-'-<<2'#9#0#0#13#1#0#16#1#1#20#2#1#23#3#1#27#3#2#31#4#2'"'#5#2'&'#5#3')'#6#3'-'#7#3+
-'1'#7#4'4'#8#4'8'#9#4';'#9#5'<'#10#5#10#20#7#12#22#11#15#24#14#17#26#18#19#28#22#22+
-#30#26#24' '#29#26'"!'#29'$%'#31'&)!(,$*0&,4(.8+0;-2?<'#10#5'<'#12#9'<'#15#12'<'#17+
-#16'<'#19#20'<'#22#23'<'#24#27'<'#26#31'<'#29'"<'#31'&<!*<$-<&1<(5<+8<-<?*#=(!;'#39+
-' :%'#30'8$'#28'6"'#27'4!'#25'2'#31#23'1'#30#22'/'#28#20'-'#27#18'+'#25#17')'#24#15+
-'('#22#13'&'#21#12'$'#19#10#0#11#0#1#14#1#3#18#1#4#21#2#5#24#3#7#27#3#8#31#4#9'"'#5+
-#11'%'#5#12'('#6#13','#7#15'/'#7#16'2'#8#17'5'#9#19'9'#9#20'<'#10'6.<4,91)7/'#39'4'+
-'-$1*".( ,&'#29')#'#27'&!'#24'#'#31#22'!'#28#20#30#26#17#27#24#15#24#21#12#22#19#10+
-#19#12#20'8'#14#22'8'#16#24'9'#18#27'9'#21#29'9'#23#31'9'#25'!:'#27'#:'#29'&:'#31+
-'(:!*;#,;&.;(1;*3<,5<'#21#11#2#23#13#2#25#15#2#27#17#2#29#19#1#31#21#1'!'#23#1'#'#25+
-#1'&'#28#1'('#30#1'* '#1',"'#1'.$'#0'0&'#0'2('#0'4*'#0#0#10'?'#0#10'='#0#10'<'#0#10+
-':'#0#9'8'#0#9'6'#0#9'5'#0#9'3'#0#9'1'#0#9'0'#0#8'.'#0#8','#0#8'*'#0#8')'#0#8#39#0+
-#8'%'#0#7'$'#0#7'"'#0#7' '#0#7#31#0#7#29#0#7#27#0#6#25#0#6#24#0#6#22#0#6#20#0#6#19+
-#0#6#17#0#5#15#0#5#13#0#5#12#0#5#10#31#10#31'!'#11'!#'#11'#%'#12'%'#39#13#39')'#13+
-')+'#14'+-'#15'-.'#15'.0'#16'02'#17'24'#17'46'#18'68'#19'8:'#19':<'#20'<'#10#31#31+
-#10'!!'#10'##'#10'%%'#10#39#39#10'))'#10'++'#10'--'#10'0/'#10'21'#10'43'#10'65'#10+
-'87'#10':9'#10'<;'#10'>=<<<:::888666555333111///---+++***(((&&&$$$"""   '#31#31#31+
-#29#29#29#27#27#27#25#25#25#23#23#23#21#21#21#20#20#20#18#18#18#16#16#16#14#14#14+
-#12#12#12#10#10#10#9#9#9#7#7#7#5#5#5#3#3#3;
+const NTSCCOL:string='C'#15#1#0#0'x'#218#229'Q'#161#146#194'0'#16']'#134#21#17#17+
+#17#21#253#128#19#21#136#19#136#10'$'#18#137'@'#156#168#224#3'*'#144#8'd'#5#2#129+
+'@'#156'D'#156#228'3"'#145#136#138#10'$'#178'""3'#144'4'#161#221'f'#238#142#15#224+
+#229#237'['#145#236#155#221#236#16#6#160#203'I'#4#18#18#1'3'#158'CQ!3'#192'C'#28#185+
+#147#2#2'%'#19'\'#8#18#177#205#132#223'J+'#202#11#2'R'#202'Z'#213'5'#137#189#181'%'+
+#17#27#213#224'`'#179#182'6'#222#173#243#237#210#156'9'#160#207'['#214#135''#252+
+#167#130#158'_'#228'm'#181#27'/a'#151#23#155#31#238#202'24'#142'h('#130#254#147#192+
+'?c'#166#130#176'V'#186'w*.8'#39'!'#149#25'Zu'#146'4u'#157','#188#175#239#131'm'#218+
+#255#248']'#163#160#191'QP'#175'^'#206#255'q'#206#182'Q'#250#181'^'#225'i'#177'/'#143+
+#216'`'#234'W'#0'c'#179#211'f'#177'N0'#13#230#157'@'#31#220#155'?%w'#223#216#178'p'+
+#131#183#188#146'^m>'#6#253''#194#255'X'#7#251'O'#131'{'#249'b'#254';'#188'7'#30+
+'\'#215#9'7';
 
