@@ -1,1 +1,3 @@
-bin2inc ntsc.col ..\..\source\ntsccol.inc NTSCCOL
+rem bin2inc ntsc.col ..\..\source\ntsccol.inc NTSCCOL
+
+bin2inc ntsc.bdp ..\..\source\ntsccol.inc NTSCCOL
